--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8"/>
     <title>The Beatles - Discografia</title>
     <link href="main.css" rel="stylesheet">
 
@@ -49,7 +49,7 @@
             </p>
 
             <picture class="posicion">
-                <img src="https://i.ytimg.com/vi/X4k8veVWNkg/maxresdefault.jpg">
+                <img src="https://i.ytimg.com/vi/X4k8veVWNkg/maxresdefault.jpg" alt="With the beatles">
             </picture>
 
             <p class="decoracion">
@@ -64,7 +64,7 @@
             </p>
 
             <picture class="posicion">
-                <img src="https://rovimusic.rovicorp.com/image.jpg?c=CG5UgIZv2Jf5b6sV5-4CBhyhM-OFI8zG4l-qVpXXB1I=&f=4">
+                <img src="https://rovimusic.rovicorp.com/image.jpg?c=CG5UgIZv2Jf5b6sV5-4CBhyhM-OFI8zG4l-qVpXXB1I=&f=4" alt="Sgt peper's">
             </picture>
 
             <p class="decoracion">
@@ -80,7 +80,7 @@
             </p>
 
             <picture class="posicion">
-                <img src="https://i.scdn.co/image/ab6761610000e5ebe9348cc01ff5d55971b22433">
+                <img src="https://i.scdn.co/image/ab6761610000e5ebe9348cc01ff5d55971b22433" alt="Let it be">
             </picture>
 
 
@@ -231,6 +231,7 @@
                         allowfullscreen></iframe>
 
                 </li>
+            </ol>    
 
         </section>
 
