arrelgo-info-Jhon-Lennon

--- a/index.html
+++ b/index.html
@@ -145,22 +145,23 @@
 
                     <picture class="posicion raidus">
                         <img src="https://yt3.googleusercontent.com/pqeV3MsjQY8KcPapSPSJbTFV3emfTD-ZezOB_BfdS9b58rCmsNb60ThGwjehlLU9IGw_VMSKyg=s900-c-k-c0x00ffffff-no-rj"
-                            alt="Ringo starr">
+                            alt="Jhon Lennon">
 
                     </picture>
                     <p>
-                        Richard Starkey(Liverpool, 7 de julio de 1940), más conocido como Ringo Starr, es un músico,
-                        multiinstrumentista, cantante, compositor y actor británico. Fue el baterista de la banda de
-                        rock The Beatles. Antes de formar parte de The Beatles, Starr fue miembro de otra banda de
-                        Liverpool, Rory Storm and the Hurricanes. En agosto de 1962, Pete Best fue despedido y Ringo
-                        ocupó su lugar. Además de tocar la batería, Starr participó como vocalista en varias canciones
-                        versionadas o creadas por el grupo como «With a Little Help from My Friends», «Yellow
-                        Submarine», «I Wanna Be Your Man», «Act Naturally», «Boys», entre otras y fue el compositor de
-                        las canciones «Don't Pass Me By» y «Octopus's Garden».
+                        John Winston Lennon (Liverpool, 9 de octubre de 1940-Nueva York, 8 de diciembre de 1980) fue un
+                        artista, músico, cantautor, activista, compositor, productor, escritor y pacifista británico,
+                        conocido por ser uno de los líderes junto con Paul McCartney y fundador de la banda de rock The
+                        Beatles y considerado uno de los artistas más influyentes del siglo xx.
 
-                        La contribución creativa de Starr a la música de The Beatles fue objeto de elogios por músicos y
-                        críticos. El baterista Steve Smith comentó que la popularidad de Starr «dio luz a un nuevo
-                        paradigma donde se comenzó a ver al batería como un participante más en el aspecto compositivo».
+                        Nació en Liverpool, donde siendo adolescente se vio inmerso en el boom británico del skiffle;
+                        formó la banda The Quarrymen en 1956, que posteriormente en 1960 se convertiría en The Beatles.
+                        Cuando el grupo se disolvió, Lennon inició una carrera como solista en la que publicó varios
+                        álbumes como John Lennon/Plastic Ono Band e Imagine, y canciones icónicas como «Give Peace a
+                        Chance» e «Imagine»; la mayoría de ellas expresan sus ideas socialistas y pacifistas. Después de
+                        contraer matrimonio con Yoko Ono en 1969 cambió su nombre a John Ono Lennon. Se retiró
+                        temporalmente de la escena musical en 1975 para criar a su pequeño hijo Sean, pero resurgió
+                        junto con Ono en 1980 con el nuevo álbum Double Fantasy. Fue asesinado ese mismo año.
                     </p>
 
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/LpdJE7HG8Ls"
